ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapi-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/flask"
        backend:
          service:
            name: flask-service
            port:
              number: 5000
